// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Colors renders error colors 1`] = `
.c0 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  border-radius: 13px;
  font-family: Chivo;
  font-weight: 700px;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  font-size: 14px;
  line-height: 20px;
  padding: 10px 14px;
  display: inline-block;
  text-align: center;
  vertical-align: middle;
  background: #A62B31;
  border: 2px solid transparent;
  color: #FFFFFF;
}

.c0:hover:not([disabled]) {
  background: #8A1A1F;
  border: 2px solid transparent;
  box-shadow: none;
  color: #FFFFFF;
  cursor: pointer;
}

.c0:disabled {
  background: #FFBCBF;
  border: 2px solid transparent;
  box-shadow: none;
  color: #D1595F;
}

<button
  className="c0"
  type="medium"
/>
`;

exports[`Button Colors renders primary colors 1`] = `
.c0 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  border-radius: 13px;
  font-family: Chivo;
  font-weight: 700px;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  font-size: 14px;
  line-height: 20px;
  padding: 10px 14px;
  display: inline-block;
  text-align: center;
  vertical-align: middle;
  background: #155DA1;
  border: 2px solid transparent;
  color: #FFFFFF;
}

.c0:hover:not([disabled]) {
  background: #0E4E8A;
  border: 2px solid transparent;
  box-shadow: none;
  color: #FFFFFF;
  cursor: pointer;
}

.c0:disabled {
  background: #B4D8FA;
  border: 2px solid transparent;
  box-shadow: none;
  color: #FFFFFF;
}

<button
  className="c0"
  type="medium"
/>
`;

exports[`Button Colors renders secondary colors 1`] = `
.c0 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  border-radius: 13px;
  font-family: Chivo;
  font-weight: 700px;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  font-size: 14px;
  line-height: 20px;
  padding: 10px 14px;
  display: inline-block;
  text-align: center;
  vertical-align: middle;
  background: #155DA1;
  border: 2px solid transparent;
  color: #FFFFFF;
}

.c0:hover:not([disabled]) {
  background: #0D3F6E;
  border: 2px solid transparent;
  box-shadow: none;
  color: #FFFFFF;
  cursor: pointer;
}

.c0:disabled {
  background: #EBEEF2;
  border: 2px solid transparent;
  box-shadow: none;
  color: #8B9199;
}

<button
  className="c0"
  type="medium"
/>
`;

exports[`Button Colors renders success colors 1`] = `
.c0 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  border-radius: 13px;
  font-family: Chivo;
  font-weight: 700px;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  font-size: 14px;
  line-height: 20px;
  padding: 10px 14px;
  display: inline-block;
  text-align: center;
  vertical-align: middle;
  background: #4C9859;
  border: 2px solid transparent;
  color: #FFFFFF;
}

.c0:hover:not([disabled]) {
  background: #256830;
  border: 2px solid transparent;
  box-shadow: none;
  color: #FFFFFF;
  cursor: pointer;
}

.c0:disabled {
  background: #BDF3C6;
  border: 2px solid transparent;
  box-shadow: none;
  color: #90E19E;
}

<button
  className="c0"
  type="medium"
/>
`;

exports[`Button Colors renders warning colors 1`] = `
.c0 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  border-radius: 13px;
  font-family: Chivo;
  font-weight: 700px;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  font-size: 14px;
  line-height: 20px;
  padding: 10px 14px;
  display: inline-block;
  text-align: center;
  vertical-align: middle;
  background: #FDBE21;
  border: 2px solid transparent;
  color: #FFFFFF;
}

.c0:hover:not([disabled]) {
  background: #DA9C03;
  border: 2px solid transparent;
  box-shadow: none;
  color: #FFFFFF;
  cursor: pointer;
}

.c0:disabled {
  background: #FFECBD;
  border: 2px solid transparent;
  box-shadow: none;
  color: #FFD15F;
}

<button
  className="c0"
  type="medium"
/>
`;

exports[`Button Group renders correctly with 20px margin per child besides last-child 1`] = `
.c0 {
  display: inline-block;
}

.c1 {
  vertical-align: middle;
}

.c1.c1 > *:not(:last-child) {
  margin-right: 20px;
}

.c2 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  border-radius: 13px;
  font-family: Chivo;
  font-weight: 700px;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  font-size: 14px;
  line-height: 20px;
  padding: 10px 14px;
  display: inline-block;
  text-align: center;
  vertical-align: middle;
  background: #155DA1;
  border: 2px solid transparent;
  color: #FFFFFF;
}

.c2:hover:not([disabled]) {
  background: #0E4E8A;
  border: 2px solid transparent;
  box-shadow: none;
  color: #FFFFFF;
  cursor: pointer;
}

.c2:disabled {
  background: #B4D8FA;
  border: 2px solid transparent;
  box-shadow: none;
  color: #FFFFFF;
}

<div
  className="c0 c1"
  display="inline-block"
>
  <button
    className="c2"
    type="medium"
  >
    APPLY
  </button>
  <button
    className="c2"
    type="medium"
  >
    APPLY
  </button>
  <button
    className="c2"
    type="medium"
  >
    APPLY
  </button>
</div>
`;

exports[`Button Sizes renders a large button 1`] = `
.c0 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  border-radius: 13px;
  font-family: Chivo;
  font-weight: 700px;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  font-size: 14px;
  line-height: 20px;
  padding: 12px 30px;
  display: inline-block;
  text-align: center;
  vertical-align: middle;
  background: #155DA1;
  border: 2px solid transparent;
  color: #FFFFFF;
}

.c0:hover:not([disabled]) {
  background: #0E4E8A;
  border: 2px solid transparent;
  box-shadow: none;
  color: #FFFFFF;
  cursor: pointer;
}

.c0:disabled {
  background: #B4D8FA;
  border: 2px solid transparent;
  box-shadow: none;
  color: #FFFFFF;
}

<button
  className="c0"
  type="large"
/>
`;

exports[`Button Sizes renders a medium button 1`] = `
.c0 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  border-radius: 13px;
  font-family: Chivo;
  font-weight: 700px;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  font-size: 14px;
  line-height: 20px;
  padding: 10px 14px;
  display: inline-block;
  text-align: center;
  vertical-align: middle;
  background: #155DA1;
  border: 2px solid transparent;
  color: #FFFFFF;
}

.c0:hover:not([disabled]) {
  background: #0E4E8A;
  border: 2px solid transparent;
  box-shadow: none;
  color: #FFFFFF;
  cursor: pointer;
}

.c0:disabled {
  background: #B4D8FA;
  border: 2px solid transparent;
  box-shadow: none;
  color: #FFFFFF;
}

<button
  className="c0"
  type="medium"
/>
`;

exports[`Button Sizes renders a small button 1`] = `
.c0 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  border-radius: 13px;
  font-family: Chivo;
  font-weight: 700px;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  font-size: 12px;
  line-height: 16px;
  padding: 10px 14px;
  display: inline-block;
  text-align: center;
  vertical-align: middle;
  background: #155DA1;
  border: 2px solid transparent;
  color: #FFFFFF;
}

.c0:hover:not([disabled]) {
  background: #0E4E8A;
  border: 2px solid transparent;
  box-shadow: none;
  color: #FFFFFF;
  cursor: pointer;
}

.c0:disabled {
  background: #B4D8FA;
  border: 2px solid transparent;
  box-shadow: none;
  color: #FFFFFF;
}

<button
  className="c0"
  type="small"
/>
`;

exports[`Button renders correct colors with "outline" and "disabled" props (primary colors) 1`] = `
.c0 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  border-radius: 13px;
  font-family: Chivo;
  font-weight: 700px;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  font-size: 14px;
  line-height: 20px;
  padding: 10px 14px;
  display: inline-block;
  text-align: center;
  vertical-align: middle;
  background: #FFFFFF;
  border: 2px solid #155DA1;
  color: #155DA1;
}

.c0:hover:not([disabled]) {
  background: #FFFFFF;
  border: 2px solid #0E4E8A;
  box-shadow: none;
  color: #0E4E8A;
  cursor: pointer;
}

.c0:disabled {
  background: #FFFFFF;
  border: 2px solid #B4D8FA;
  box-shadow: none;
  color: #B4D8FA;
}

<button
  className="c0"
  disabled={true}
  type="medium"
/>
`;

exports[`Button respects "outline" prop 1`] = `
.c0 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  border-radius: 13px;
  font-family: Chivo;
  font-weight: 700px;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  font-size: 14px;
  line-height: 20px;
  padding: 10px 14px;
  display: inline-block;
  text-align: center;
  vertical-align: middle;
  background: #FFFFFF;
  border: 2px solid #155DA1;
  color: #155DA1;
}

.c0:hover:not([disabled]) {
  background: #FFFFFF;
  border: 2px solid #0E4E8A;
  box-shadow: none;
  color: #0E4E8A;
  cursor: pointer;
}

.c0:disabled {
  background: #FFFFFF;
  border: 2px solid #B4D8FA;
  box-shadow: none;
  color: #B4D8FA;
}

<button
  className="c0"
  type="medium"
/>
`;

exports[`Button respects the "disabled" prop 1`] = `
.c0 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  border-radius: 13px;
  font-family: Chivo;
  font-weight: 700px;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  font-size: 14px;
  line-height: 20px;
  padding: 10px 14px;
  display: inline-block;
  text-align: center;
  vertical-align: middle;
  background: #155DA1;
  border: 2px solid transparent;
  color: #FFFFFF;
}

.c0:hover:not([disabled]) {
  background: #0E4E8A;
  border: 2px solid transparent;
  box-shadow: none;
  color: #FFFFFF;
  cursor: pointer;
}

.c0:disabled {
  background: #B4D8FA;
  border: 2px solid transparent;
  box-shadow: none;
  color: #FFFFFF;
}

<button
  className="c0"
  disabled={true}
  type="medium"
/>
`;
